[package]
name = "rdms"
version = "0.0.1"
authors = ["prataprc <prataprc@gmail.com>"]
description = "Composable storage for key,value index"
documentation = "https://docs.rs/rdms"
homepage = "https://github.com/bnclabs/rdms"
repository = "https://github.com/bnclabs/rdms"
keywords = ["storage", "mvcc", "llrb", "btree", "lsm"]
categories = ["data-structures", "database"]
license = "AGPL-3.0"
exclude = ["template/**", "docs/**"]
readme = "README.md"
edition = "2018"

[lib]
name = "rdms"
path = "src/lib.rs"

[[bin]]
name = "rdms"
required-features = ["rdms"]

[[bin]]
name = "crio"
required-features = ["crio"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "bnclabs/rdms" }

[dependencies]
cbordata = { version = "0.5.4" }
xorfilter-rs = { path = "../xorfilter", features = ["cbordata"] }
arbitrary = { version = "1", features = ["derive"] }
toml = "0.5.8"
lazy_static = "1.2.0"
fs2 = "0.4.3"
croaring = "0.5.1"
fasthash = "0.4.0"
git2 = "0.13.20"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"

structopt = { version = "0.3.20", default-features = false, optional = true }
rand = { version = "0.8.4", features = ["small_rng"], optional = true }
lmdb = { version = "0.8.0", optional = true }
csv = { version = "1.1", optional = true }
url = { version = "2.2.2", features = ["serde"], optional = true }
ureq = { version = "2.3", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
sha-1 = { version = "0.9.8", optional = true }

# jsondata = "0.6.2"
# jsondata = { git = "https://github.com/bnclabs/jsondata.git" }
# log = "0.4.8"
# memmap = "0.7.0"
# sys-info = "0.5.10"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"]}
crc = "2.1.0"

[features]
rdms = ["structopt", "rand", "lmdb", "sha-1"]
crio = ["structopt", "csv", "url", "ureq", "tar", "flate2"]
